--- a/VRChat/55/1101955.html
+++ b/VRChat/55/1101955.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "P4JJmop1h42+jTqS4iwLkqpxfz5xPKYysYoSYbi9Juc="></script>
+    "v/uL5rYF2MNlvK6LPvJj5R1Ej9RHBUuftSKdtCPIIKI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[3Dモデル] ユーフォニウム","description":"金管楽器「ユーフォニウム」の3Dモデルです。\n\n・三角ポリゴン数　12876(通常版) / 8355(ローポリ版)\n\n・使用方法：\nUnityにて使用する場合は、unitypackageをインポート後、Prefabsフォルダ内のプレハブをシーンにドラッグ\u0026ドロップするとセッティング済みの物が使えます。\n\n・不具合、ご要望等ありましたら制作者のTwitterアカウントかメールアドレスへご連絡ください。\n\n---------------------------------------------------\n【利用規約】\n\n・本モデルデータ及び同梱された全てのデジタルデータを購入した時点で本利用規約に同意したものとします。\n\n・利用規約の内容は変更される場合があり、常に最新のものが適用されます。\n\n\n*著作権について\n\n・本データ及びそれらを改変したデータの著作権は、かさねに帰属するものとします。\n\n\n*改変及び一部パーツの転用について\n\n・本データの改変及び一部パーツの他モデルへの転用は個人利用の範囲で許可します。\n　ただし、改変後データ及び一部パーツを流用したデータの再配布、販売は禁止します。\n\n\n*制定日\n2019年2月14日\n\n---------------------------------------------------\n【ファイル構成】\n\n「Euphonium_1_00」フォルダ\n-「Models」フォルダ\n　fbx形式の3Dモデルが入っています。\n　通常版とポリゴン数を抑えたものの二つがあります。\n-「Textures」フォルダ\n　使用するテクスチャが入っています。\n-「Euphonium_1_00.unitypackage」\n　Unityでインポートすることで使えるセッティング済みのモデルです。\n\n\n---------------------------------------------------\n【制作者】\n\n・本データは全て かさね が制作しています。\n　\n\n*連絡先\n\nTwitter : @kasane_vtuber\nmail : kasane.first.personality@gmail.com\n\n---------------------------------------------------\n【更新履歴】\n\n\n2019/02/14\n・販売開始(ver1.00)\n","url":"https://booth.pm/ja/items/1101955","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/ada44999-f6fd-4fbc-94eb-6deda5275d42/i/1101955/d0892847-a013-4875-8df5-1ea3741b7340_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="P4JJmop1h42+jTqS4iwLkqpxfz5xPKYysYoSYbi9Juc="></script>
+    nonce="v/uL5rYF2MNlvK6LPvJj5R1Ej9RHBUuftSKdtCPIIKI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1101955/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               64
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1101955/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               64
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
