--- a/VRChat/07/1226907.html
+++ b/VRChat/07/1226907.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "sbOY9SuWVcqF/W9Anf43sHonHOpsIPseLgb87K5g2Ew="></script>
+    "8i+gFRuew00Sap0L5Q44H01s3YDVlylIaLm8v178/Y4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"バーチャル手作りチョコレート 1.1","description":"みんなへのバレンタインプレゼントですよ！\n9つ種類のチョコレートが含めっています！\n\n・3Dデータ形式：FBX\n・テクスチャー形式：PNG\n・メッシュ数：11\n・ポリゴン数：3738\n\n2020/02/07 v1.1アップデートしました！\n\n","url":"https://booth.pm/ja/items/1226907","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1226907/c3cc9c85-49fb-4e68-a1ae-75b5f9bc5ce9_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="sbOY9SuWVcqF/W9Anf43sHonHOpsIPseLgb87K5g2Ew="></script>
+    nonce="8i+gFRuew00Sap0L5Q44H01s3YDVlylIaLm8v178/Y4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,10 +163,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1226907/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              399
+                              398
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1226907/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              399
+                              398
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
