--- a/VRChat/71/1226871.html
+++ b/VRChat/71/1226871.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "PhLacTZuLoo1o3SS08e0cA3guE/onQDfMwZW8WN3kr4="></script>
+    "z8cZJVDc2ayERVIRY71xhuY8npYmy4SclAgUFFSXDis="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"SiFiCircuit","description":"SiFi風のマテリアルです。\n空間を埋め尽くす回路のような表現をしたいときに使えると思います。\n本体は(シェーダーでポリゴンを増やしているので)1ポリゴンなので、ポリゴン数に余裕がなくても比較的気軽にアクセサリーとして使用できます。\n\n【製作者】\nTwitter : HHOTATEA_VRC\nDiscord : hhotatea #0333\n何かあればいつでも連絡ください。\n\n【規約】\n・VRCの仕様変更により本パッケージの機能が使えなくなった場合、製作者は責任を負いません。(可能な限りの対策はします。)\n・著作権は製作者に帰属します。\n・本製品を使って発生した問題に対しては製作者は一切の責任を負いません。\n\n許可事項\n・改変・解析\n禁止事項\n・二次配布\n・迷惑行為等\n\n【プロパティー】\n①BaseColor : 基本の線の色です\n②PointColor : 移動する点の色です\n③Width : 線の太さです\n④PointSize : 移動する点の大きさです\n⑤MinAlpha : 透明度の最低値です\n⑥Speed : 処理速度です\n⑦Cycle : 線の点滅の頻度です\n⑧Interval : 線の点滅の間隔です\n⑨TesselationFactor : 線の密度です\n\n2019/02/13 配布開始","url":"https://booth.pm/ja/items/1226871","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/4fb745c3-074a-4dd3-a297-3f01ee3312c7/i/1226871/f9734a1b-ebc8-4518-a6f4-0856a6c0c7de_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="PhLacTZuLoo1o3SS08e0cA3guE/onQDfMwZW8WN3kr4="></script>
+    nonce="z8cZJVDc2ayERVIRY71xhuY8npYmy4SclAgUFFSXDis="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,10 +164,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1226871/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              197
+                              198
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1226871/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              197
+                              198
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
