--- a/VRChat/94/1226794.html
+++ b/VRChat/94/1226794.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "IpHXQTVpE5Y0h301iUypdUz50P2ztMoMqngUDl+jxOk="></script>
+    "RI9DCsi1hYOE3bDy2VKS9BuVuNIY6LICFakbjwZfWSo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル『レミナ』VRChat想定アバター","description":"VRChatアバター想定オリジナル3Dモデル\nレミナ(Lemina)\n\n　本モデルは、VRChatでのアバター利用を想定して作られたモデルです。(Unity標準Humanoid型)\n\n　VRChatでのアバター使用は、セットアップ済みのUnityPackage形式同梱なので導入も簡単です。\n\n　デフォルト身長約129cm\n　Unity上でコート、ベストを取り外せます。\n　リップシンク15種設定済み。\n　アイトラッキングを設定済みです。\n　表情変更用のシェイプキーがあり、組み合わせて表情が作れます。\n\n　VRC_SDKが導入されていれば、付属のパッケージを導入するだけでアップロードの準備が完了します。\n　DynamicBoneを使用する際には、事前にUnityプロジェクト内にDynamicBoneをインポートしておいてください。\n\n　動作確認は、VRChat上でのデスクトップモード、VRモード、フルトラッキングVRモード(コントローラ2つ+トラッカー3つ)で行っています。\n\n　使用しているShaderとして、synqarkさんが作成された「arktoon-shaders-1.0.0.0」を同梱し、再配布という形で使用しております。\n\n◆同梱ファイル\n　UnityPackage(インポートしてSceneファイルを開くだけで、VRChatにアップロード可能な状態になります。\n　fbxファイル\n　テクスチャーファイル\n　psdファイル(uvを表示したレイヤー等が含まれています。色改変等にご利用下さい)\n　ReadMe.text(販売ページ内で全文を読めます)","url":"https://booth.pm/ja/items/1226794","offers":{"priceCurrency":"JPY","@type":"Offer","price":"4000"},"image":"https://booth.pximg.net/c/620x620/947de320-3fbe-4c49-8a33-54211b03d19e/i/1226794/6aab4b43-595f-442d-a02f-ad34ea0fa5e2_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="IpHXQTVpE5Y0h301iUypdUz50P2ztMoMqngUDl+jxOk="></script>
+    nonce="RI9DCsi1hYOE3bDy2VKS9BuVuNIY6LICFakbjwZfWSo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1226794/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               129
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1226794/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               129
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
