--- a/VRChat/92/1226792.html
+++ b/VRChat/92/1226792.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Tx6BCcgk2Zmv1l4qraZk1wfqFKxGf7pYSHes53A3HSI="></script>
+    "fKSlYjdzKXkAeVUn2TL7jhK92mrp3hgsw7sNsrU76WQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"犬アクセサリー","description":"VRChat使用想定　犬型バッジ＆ヘアピン\n\n\n内容物\n・犬アクセ.unitypackage\n・UVテンプレート\n\nモデル概要\n・バッジ\nポリゴン数：268\nマテリアル数：1\n\n・ヘアピン\nポリゴン数：516\nマテリアル数：1\n\n改変可・再配布不可です。\n","url":"https://booth.pm/ja/items/1226792","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/c5e6ca9e-0060-44bc-918c-e161cccb358b/i/1226792/5b340916-454d-4eae-9534-22a52e10f35e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Tx6BCcgk2Zmv1l4qraZk1wfqFKxGf7pYSHes53A3HSI="></script>
+    nonce="fKSlYjdzKXkAeVUn2TL7jhK92mrp3hgsw7sNsrU76WQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1226792/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               90
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1226792/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               90
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
