--- a/VRChat/26/1226626.html
+++ b/VRChat/26/1226626.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Nff/6jwMMMvqj6+790o61JpmnMRirEyGxi75NLgKR38="></script>
+    "SjOURhVkVHw8Zu6sAnJYat2tmqEmJo4T4CZ5RvExJhY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ハート形のチョコレート","description":"ハート形のチョコレートです。バレンタインデーのプレゼントやワールドオブジェクトなどにどうぞ。\n(1618ポリゴン,マテリアルx1)\n\nUnity及びVRChatでの使用を想定していますが、fbxファイルおよびテクスチャファイルを同梱していますので、他の3Dモデルやゲームソフト等に組み込んで使用することも可能です。\n陰影などもある程度テクスチャに焼き込んだものを同梱していますので、任意のトゥーンシェーダなどで使用することもできます。\n裏表両面が描画されるよう改変を行ったStandardシェーダーでUnlitっぽくセットアップしています。\n別のシェーダを使用する場合は、Arktoonシェーダーなどの裏表両面が描画されるシェーダの使用がおすすめです。","url":"https://booth.pm/ja/items/1226626","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/64255878-1532-4d6c-abdb-a9cf35ee4a39/i/1226626/469c10a9-3f2e-4e68-a94f-565e6f789b9a_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Nff/6jwMMMvqj6+790o61JpmnMRirEyGxi75NLgKR38="></script>
+    nonce="SjOURhVkVHw8Zu6sAnJYat2tmqEmJo4T4CZ5RvExJhY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1226626/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               90
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1226626/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               90
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
