--- a/VRChat/57/1223957.html
+++ b/VRChat/57/1223957.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "XjF+Z8hqJk65pRlUCpzNEStv8dVvsON4pXmWxcDfXuI="></script>
+    "Ucihj2NR/asdRhgVhhtAgD02azicKZnCzx7ctlRw8Ok="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"水の滴るビニール傘","description":"VRCで使用を想定した3Dモデルです。\n\nポリゴン数三角換算6360\n\n〇製品説明\n水の滴るテクスチャーアニメーション付きのビニール傘です。\n開閉シェイプがついています。\nアバター等に持たせたり、ワールドに置くなどの利用ができるかと思います。\n\nシェーダー\nテクスチャースクロール付きのArktoonシェーダーが同梱されています。\nhttps://booth.pm/ja/items/1027997\n\n〇製品内容\n・UnityPackage\n・fbxファイル\n・本体用テクスチャ14枚\n・sppファイル\n\n〇利用規約\n・著作権は作者であるSirohoneが保有しています。\n\n・以下のような使用を禁止致します。\n　×公序良俗に反する利用\n　×政治的・宗教的主張に関する利用\n　×本製品を取り出せる形での再配布・再販売\n　×自作発言等、製作者を騙る言動\n\n・テクスチャ改変、モデル改変および商業への使用は制限致しません。\n\n・本モデルデータ、および改変したモデルを使用したことにより発生したトラブルや損失に関して、作者とその関係者、およびその所属するいかなる団体も、一切の責任を負わないものとします。\n\n\n\n〇本体説明\nポリゴン数 △6360\nGIMP等の画像編集ツールやSubstancePainterなどのアプリケーションで色変えや柄着けなどを行うことができます。\n\n\n\n〇お問い合わせ\nTwitter：@konbu1991　までご連絡ください。","url":"https://booth.pm/ja/items/1223957","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/c435a8c1-9036-4264-a212-8d3cdf1b37c3/i/1223957/fca246f5-16cf-4c8b-870c-3f5306f46d06_base_resized.jpg"}
     </script>
@@ -83,16 +83,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="XjF+Z8hqJk65pRlUCpzNEStv8dVvsON4pXmWxcDfXuI="></script>
+    nonce="Ucihj2NR/asdRhgVhhtAgD02azicKZnCzx7ctlRw8Ok="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -130,7 +129,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -171,7 +171,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1223957/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               500
@@ -186,14 +186,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1223957/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               500
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
